--- a/backgrounds/graphicdesign.yml
+++ b/backgrounds/graphicdesign.yml
@@ -1,7 +1,7 @@
 id: 1332
 cost: 50
-name: "8Graphic Design"
-backgroundImage: "graphic.png"
+name: "Graphic Design"
+backgroundImage: "graphic.jpg"
 
 colors:
     backgroundColor:
