--- a/backgrounds/verybluecastle.yml
+++ b/backgrounds/verybluecastle.yml
@@ -1,7 +1,7 @@
 id: 23232
 cost: 87000
 name: "Very Blue Castle"
-backgroundImage: "verybluecastle.jpg"
+backgroundImage: "verybluecastlejpg.jpg"
 
 colors:
     backgroundColor:
